tests/Rules/Forms/Fixtures/valid/input_tel_with_autocomplete.html.twig
<form>
  <input type="tel" name="phone" autocomplete="tel">
</form>
