tests/Rules/Forms/Fixtures/invalid/input_tel_missing_autocomplete.html.twig
{# 1 errors #}
<form>
  <input type="tel" name="phone">
</form>
